fix shadow spill on stickers

--- a/braden-walker-portfolio/src/styles/css/index.css
+++ b/braden-walker-portfolio/src/styles/css/index.css
@@ -1401,6 +1401,7 @@ html {
   right: 0px;
   display: flex;
   z-index: -1;
+  clip: rect(0px 100px 100px 0px);
 }
 #articles .articles-content-container .article-sticker .links .link {
   box-shadow: 5px 5px 8px rgba(0, 0, 0, 0.3);
@@ -1869,6 +1870,7 @@ html {
   right: 0px;
   display: flex;
   z-index: -1;
+  clip: rect(0px 100px 100px 0px);
 }
 #contact .contacts-content-container .contact-sticker .links .link {
   box-shadow: 5px 5px 8px rgba(0, 0, 0, 0.3);
