--- a/braden-walker-portfolio/src/styles/less/contact.less
+++ b/braden-walker-portfolio/src/styles/less/contact.less
@@ -217,6 +217,7 @@
                 right: -0px;
                 display: flex;
                 z-index: -1;
+                clip: rect(0px 100px 100px 0px); // Gets rid of the shadow that spills from the top
 
                 .link {
                     #craft > .sticker;
